# deepNeuronalFilter

./: CMakeLists.txt  dnf.h
audio_filter/: audio_filter.cpp  parameters.h
directional_audio/: CMakeLists.txt  alsa_cpp_wrapper.cpp  directional_audio.cpp
dnf/: Layer.cpp  Layer.h  Net.cpp  Net.h  Neuron.cpp  Neuron.h
